--- a/examples/00-conservation/mlm2cons.ipynb
+++ b/examples/00-conservation/mlm2cons.ipynb
@@ -65,6 +65,8 @@
     }
    ],
    "source": [
+    "## load sequences(ids_extend), conservation scores(phastcons, phylop), \n",
+    "##   and pre-computed nucleotide embeddings (SpliceBERT, SpliceBERT-Human)\n",
     "results = pickle.load(open(\"./conservation_embedding/sequence_embed.pkl\", 'rb'))\n",
     "results[\"ids\"] = list()\n",
     "flanking = 250\n",
