update variant analysis
Former-commit-id: 6819c27e0d7c8609143423518275fb3aeb63db37

--- a/examples/01-variant/variant_analysis.ipynb
+++ b/examples/01-variant/variant_analysis.ipynb
@@ -2,35 +2,72 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'scientific_notation' from 'utils' (/home/chenken/Documents/github/test_github/SpliceBERT/examples/01-variant/../scripts/utils.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[1;32m/home/chenken/Documents/github/test_github/SpliceBERT/examples/01-variant/variant_analysis.ipynb Cell 1\u001b[0m in \u001b[0;36m<cell line: 13>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2B7b22686f73744e616d65223a2247505532227d/home/chenken/Documents/github/test_github/SpliceBERT/examples/01-variant/variant_analysis.ipynb#W0sdnNjb2RlLXJlbW90ZQ%3D%3D?line=10'>11</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mscipy\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mstats\u001b[39;00m \u001b[39mimport\u001b[39;00m ttest_ind, mannwhitneyu\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2B7b22686f73744e616d65223a2247505532227d/home/chenken/Documents/github/test_github/SpliceBERT/examples/01-variant/variant_analysis.ipynb#W0sdnNjb2RlLXJlbW90ZQ%3D%3D?line=11'>12</a>\u001b[0m sys\u001b[39m.\u001b[39mpath\u001b[39m.\u001b[39mappend(\u001b[39m\"\u001b[39m\u001b[39m../scripts\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m---> <a href='vscode-notebook-cell://ssh-remote%2B7b22686f73744e616d65223a2247505532227d/home/chenken/Documents/github/test_github/SpliceBERT/examples/01-variant/variant_analysis.ipynb#W0sdnNjb2RlLXJlbW90ZQ%3D%3D?line=12'>13</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mutils\u001b[39;00m \u001b[39mimport\u001b[39;00m set_spines, get_figure_size, get_fontsize_rc_params, count_items, scientific_notation\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2B7b22686f73744e616d65223a2247505532227d/home/chenken/Documents/github/test_github/SpliceBERT/examples/01-variant/variant_analysis.ipynb#W0sdnNjb2RlLXJlbW90ZQ%3D%3D?line=13'>14</a>\u001b[0m font_params \u001b[39m=\u001b[39m get_fontsize_rc_params(\u001b[39m7.5\u001b[39m)\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2B7b22686f73744e616d65223a2247505532227d/home/chenken/Documents/github/test_github/SpliceBERT/examples/01-variant/variant_analysis.ipynb#W0sdnNjb2RlLXJlbW90ZQ%3D%3D?line=14'>15</a>\u001b[0m plt\u001b[39m.\u001b[39mrcParams\u001b[39m.\u001b[39mupdate(font_params)\n",
+      "\u001b[0;31mImportError\u001b[0m: cannot import name 'scientific_notation' from 'utils' (/home/chenken/Documents/github/test_github/SpliceBERT/examples/01-variant/../scripts/utils.py)"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
+    "os.environ[\"CUDA_VISIBLE_DEVICES\"] = \"2\"\n",
     "import sys\n",
-    "import json\n",
-    "import pickle\n",
-    "import gzip\n",
-    "from glob import glob\n",
     "from tqdm import tqdm\n",
+    "import pickle\n",
     "import numpy as np\n",
-    "import pandas as pd\n",
-    "from importlib import reload\n",
-    "from collections import defaultdict, OrderedDict\n",
     "import matplotlib.pyplot as plt\n",
     "new_rc_params = {'text.usetex': False, 'svg.fonttype': 'none' }\n",
     "plt.rcParams.update(new_rc_params)\n",
     "from sklearn.metrics import average_precision_score, precision_recall_curve\n",
     "from scipy.stats import ttest_ind, mannwhitneyu\n",
     "sys.path.append(\"../scripts\")\n",
-    "from utils import set_spines, get_figure_size, get_fontsize_rc_params, count_items\n",
+    "from utils import set_spines, get_figure_size, get_fontsize_rc_params, count_items, scientific_notation\n",
     "font_params = get_fontsize_rc_params(7.5)\n",
     "plt.rcParams.update(font_params)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "found insilico_mutation_in_transcripts.pkl, skip\n",
+      "found ./output/vexseq.SpliceBERT.output.pkl, skip\n",
+      "found ./output/mfass.SpliceBERT.output.pkl, skip\n",
+      "found ./output/vexseq.SpliceBERT-human.output.pkl, skip\n",
+      "found ./output/mfass.SpliceBERT-human.output.pkl, skip\n",
+      "found ./output/vexseq.DNABERT3.output.pkl, skip\n",
+      "found ./output/mfass.DNABERT3.output.pkl, skip\n",
+      "found ./output/vexseq.DNABERT4.output.pkl, skip\n",
+      "found ./output/mfass.DNABERT4.output.pkl, skip\n",
+      "found ./output/vexseq.DNABERT5.output.pkl, skip\n",
+      "found ./output/mfass.DNABERT5.output.pkl, skip\n",
+      "found ./output/vexseq.DNABERT6.output.pkl, skip\n",
+      "found ./output/mfass.DNABERT6.output.pkl, skip\n"
+     ]
+    }
+   ],
+   "source": [
+    "## run pipeline.sh to generate data, this step will take ~1 hour on a single NVIDIA 3090 GPU\n",
+    "! ./pipeline.sh"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,32 +269,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from biock import scientific_notation"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "pval 0.05983243389122921\n",
+      "pval Ttest_indResult(statistic=1.5568736427303085, pvalue=0.05983243389122921)\n",
       "0.5443239472349062 0.49349762130205793 1.1029920383379896\n",
-      "pval 1.5880670700493642e-10\n",
+      "pval Ttest_indResult(statistic=6.323213047702285, pvalue=1.5880670700493642e-10)\n",
       "0.6893264840182648 0.4849486476486202 1.4214422235439057\n",
       "[0.05983243389122921, 1.5880670700493642e-10]\n",
-      "pval 3.93845368663429e-48\n",
+      "pval Ttest_indResult(statistic=14.557893015329446, pvalue=3.93845368663429e-48)\n",
       "0.6380128309269967 0.4902846976426685 1.3013109199504245\n",
-      "pval 9.728707889095826e-62\n",
+      "pval Ttest_indResult(statistic=16.58007207371667, pvalue=9.728707889095826e-62)\n",
       "0.6567983604330327 0.48876467048974803 1.3437926267766305\n",
-      "[3.93845368663429e-48, 9.728707889095826e-62]\n"
+      "[Ttest_indResult(statistic=14.557893015329446, pvalue=3.93845368663429e-48), Ttest_indResult(statistic=16.58007207371667, pvalue=9.728707889095826e-62)]\n"
      ]
     },
     {
@@ -298,10 +326,10 @@
     "bp2 = ax.boxplot(x=plot_data_nonsdv, positions=inds + shift, widths=w, patch_artist=True, boxprops=dict(facecolor=\"tab:orange\"), **box_opts)\n",
     "for i in range(2):\n",
     "    x1, x2 = inds[i] - shift, inds[i] + shift\n",
-    "    pval = ttest_ind(plot_data_sdv[i], plot_data_nonsdv[i], alternative=\"greater\").pvalue\n",
+    "    pval = ttest_ind(plot_data_sdv[i], plot_data_nonsdv[i], alternative=\"greater\")\n",
     "    print(\"pval\", pval)\n",
     "    print(plot_data_sdv[i].mean(), plot_data_nonsdv[i].mean(), plot_data_sdv[i].mean() / plot_data_nonsdv[i].mean())\n",
-    "    mark = scientific_notation(pval, 2)\n",
+    "    mark = scientific_notation(pval.pvalue, 2)\n",
     "    y, h, col = 1, 0.05, 'k'\n",
     "    ax.plot([x1, x1, x2, x2], [y + h/2, y+h, y+h, y+h/2], lw=.7, c=col)\n",
     "    ax.text((x1+x2)*.5, y+h, mark, ha='center', va='bottom', color=col)\n",
@@ -335,10 +363,10 @@
     "# add significance lines\n",
     "for i in range(2):\n",
     "    x1, x2 = inds[i] - shift, inds[i] + shift\n",
-    "    pval = ttest_ind(plot_data_sdv[i], plot_data_nonsdv[i], alternative=\"greater\").pvalue\n",
+    "    pval = ttest_ind(plot_data_sdv[i], plot_data_nonsdv[i], alternative=\"greater\")\n",
     "    print(\"pval\", pval)\n",
     "    print(plot_data_sdv[i].mean(), plot_data_nonsdv[i].mean(), plot_data_sdv[i].mean() / plot_data_nonsdv[i].mean())\n",
-    "    mark = r\"$P$: {}\".format(scientific_notation(pval, decimal=1))\n",
+    "    mark = r\"$P$: {}\".format(scientific_notation(pval.pvalue, decimal=1))\n",
     "    y, h, col = 1, 0.05, 'k'\n",
     "    ax.plot([x1, x1, x2, x2], [y + h/2, y+h, y+h, y+h/2], lw=.7, c=col)\n",
     "    ax.text((x1+x2)*.5, y+h, mark, ha='center', va='bottom', color=col)\n",
@@ -347,7 +375,7 @@
     "ax.set_ylabel(\"normalized scores\")\n",
     "ax.set_title(\"MFASS\", y=1.05)\n",
     "ax.legend([bp1[\"boxes\"][0], bp2[\"boxes\"][0]], ['SDV', 'non-SDV'], loc='right', frameon=False, bbox_to_anchor=(1.28, 0.6))\n",
-    "print([ttest_ind(x, y, alternative=\"greater\").pvalue for x, y in zip(plot_data_sdv, plot_data_nonsdv)])\n",
+    "print([ttest_ind(x, y, alternative=\"greater\") for x, y in zip(plot_data_sdv, plot_data_nonsdv)])\n",
     "\n",
     "set_spines(ax)\n",
     "\n",
@@ -359,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -370,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
