use pipeline.sh

--- a/examples/00-conservation/mlm2cons.ipynb
+++ b/examples/00-conservation/mlm2cons.ipynb
@@ -53,7 +53,9 @@
     }
    ],
    "source": [
-    "! ../scripts/fetch_embed_cons.py"
+    "## run python script to generate data\n",
+    "## if pre-computed data is available, users can skip this step by commenting out the following line\n",
+    "! ./pipeline.sh cons"
    ]
   },
   {
