--- a/examples/00-conservation/mlm_acc.ipynb
+++ b/examples/00-conservation/mlm_acc.ipynb
@@ -56,7 +56,8 @@
    ],
    "source": [
     "# run python script to generate data\n",
-    "! ../scripts/evaluate_mlm_per_region.py"
+    "# if pre-computed data is available, users can skip this step by commenting out the following line\n",
+    "! ./pipeline.sh acc"
    ]
   },
   {
