add guidence to use pre-computed results

--- a/examples/01-variant/variant_analysis.ipynb
+++ b/examples/01-variant/variant_analysis.ipynb
@@ -2,21 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ImportError",
-     "evalue": "cannot import name 'scientific_notation' from 'utils' (/home/chenken/Documents/github/test_github/SpliceBERT/examples/01-variant/../scripts/utils.py)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[1;32m/home/chenken/Documents/github/test_github/SpliceBERT/examples/01-variant/variant_analysis.ipynb Cell 1\u001b[0m in \u001b[0;36m<cell line: 13>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2B7b22686f73744e616d65223a2247505532227d/home/chenken/Documents/github/test_github/SpliceBERT/examples/01-variant/variant_analysis.ipynb#W0sdnNjb2RlLXJlbW90ZQ%3D%3D?line=10'>11</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mscipy\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mstats\u001b[39;00m \u001b[39mimport\u001b[39;00m ttest_ind, mannwhitneyu\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2B7b22686f73744e616d65223a2247505532227d/home/chenken/Documents/github/test_github/SpliceBERT/examples/01-variant/variant_analysis.ipynb#W0sdnNjb2RlLXJlbW90ZQ%3D%3D?line=11'>12</a>\u001b[0m sys\u001b[39m.\u001b[39mpath\u001b[39m.\u001b[39mappend(\u001b[39m\"\u001b[39m\u001b[39m../scripts\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m---> <a href='vscode-notebook-cell://ssh-remote%2B7b22686f73744e616d65223a2247505532227d/home/chenken/Documents/github/test_github/SpliceBERT/examples/01-variant/variant_analysis.ipynb#W0sdnNjb2RlLXJlbW90ZQ%3D%3D?line=12'>13</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mutils\u001b[39;00m \u001b[39mimport\u001b[39;00m set_spines, get_figure_size, get_fontsize_rc_params, count_items, scientific_notation\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2B7b22686f73744e616d65223a2247505532227d/home/chenken/Documents/github/test_github/SpliceBERT/examples/01-variant/variant_analysis.ipynb#W0sdnNjb2RlLXJlbW90ZQ%3D%3D?line=13'>14</a>\u001b[0m font_params \u001b[39m=\u001b[39m get_fontsize_rc_params(\u001b[39m7.5\u001b[39m)\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2B7b22686f73744e616d65223a2247505532227d/home/chenken/Documents/github/test_github/SpliceBERT/examples/01-variant/variant_analysis.ipynb#W0sdnNjb2RlLXJlbW90ZQ%3D%3D?line=14'>15</a>\u001b[0m plt\u001b[39m.\u001b[39mrcParams\u001b[39m.\u001b[39mupdate(font_params)\n",
-      "\u001b[0;31mImportError\u001b[0m: cannot import name 'scientific_notation' from 'utils' (/home/chenken/Documents/github/test_github/SpliceBERT/examples/01-variant/../scripts/utils.py)"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "os.environ[\"CUDA_VISIBLE_DEVICES\"] = \"2\"\n",
@@ -62,6 +50,7 @@
    ],
    "source": [
     "## run pipeline.sh to generate data, this step will take ~1 hour on a single NVIDIA 3090 GPU\n",
+    "## if pre-computed data is available, users can skip this step by commenting out the following line\n",
     "! ./pipeline.sh"
    ]
   },
