--- a/examples/02-embedding/embedding_analysis.ipynb
+++ b/examples/02-embedding/embedding_analysis.ipynb
@@ -51,8 +51,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# generate splice site/non-splice site embedding, see `./output` for logs\n",
-    "# this step may take a long time (~1 hour on a single 3090 GPU), you can skip it and use the pre-computed results\n",
+    "## generate splice site/non-splice site embedding, see `./output` for logs\n",
+    "## this step may take a long time (~1 hour on a single 3090 GPU), you can skip it and use the pre-computed results by commenting out the following line\n",
     "! ./pipeline.sh && echo $?"
    ]
   },
