--- a/examples/03-attention/analyze_attention.ipynb
+++ b/examples/03-attention/analyze_attention.ipynb
@@ -74,7 +74,8 @@
     }
    ],
    "source": [
-    "! ./run_fetch_attention.sh"
+    "## this step may take a long time, you can skip it and use the pre-computed results by commenting out the following line\n",
+    "! ./pipeline.sh"
    ]
   },
   {
